[package]
name = "filecoin-proofs-api"
version = "0.1.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/plotozhu/rust-filecoin-proofs-api"
readme = "README.md"

[dependencies]
anyhow = "1.0.26"
serde = "1.0.104"
paired = "0.19.0"

[dependencies.filecoin-proofs-v1]
version = "2.0.0"
git = "https://github.com/xjrwfilecoin/rust-fil-proofs2.git"
branch = "config_test_v1"
package = "filecoin-proofs"
