[package]
name = "filecoin-proofs-api"
version = "3.0.1-alpha.0"
description = "API to interact with the proofs system in Filecoin"

authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/plotozhu/rust-filecoin-proofs-api"
readme = "README.md"

[dependencies]
anyhow = "1.0.26"
serde = "1.0.104"
paired = "0.19.0"
[dependencies.filecoin-proofs-v3]
version = "3.0.0"
git = "https://github.com/ploto/rust-fil-proofs.git"
rev = "16M"
package = "filecoin-proofs"
