[package]
name = "filecoin-proofs-api"
version = "5.0.0"
description = "API to interact with the proofs system in Filecoin"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/rust-filecoin-proofs-api"
readme = "README.md"

[dependencies]
anyhow = "1.0.26"
serde = "1.0.104"
paired = "0.20.0"
[dependencies.filecoin-proofs-v1]
    version = "5.0.0"
    path = "../rust-fil-local/rust-file/filecoin-proofs"
    rev = "prefetch"
    package = "filecoin-proofs"

